# optimade-gateway

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  config_fly.yml  config_heroku.yml  design.md  docker-compose.yml  hydra_registration.json  index.html  mkdocs.yml  new_new_oauth2_staging.json  new_oauth2_staging.json  oauth2.json  oauth2_staging.json  openapi_mp.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_jupyter.txt  setup.cfg  setup.py  sitemap.xml  tasks.py  test.txt  versions.json
.ci/: test_databases.json  test_gateways.json  test_links.json  test_queries.json
.github/: CODEOWNERS  dependabot.yml  fly.toml
.github/docker/: .env.ci  docker_config.json
.github/utils/: release_tag_msg.txt  single_dependency_pr_body.txt  update_docs.sh
.github/workflows/: .env.ci  cd.yml  cd_docs.yml  cd_release.yml  ci.yml  ci_automerge_dependabot.yml  ci_cd_updated_main.yml  ci_check_dependencies.yml  ci_dependabot.yml  ci_dependabot_branch.yml  ci_tests.yml  dependabot.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/CHANGELOG/: index.html
0.1.0/LICENSE/: index.html
0.1.0/api_reference/events/: index.html
0.1.0/api_reference/exception_handlers/: index.html
0.1.0/api_reference/main/: index.html
0.1.0/api_reference/middleware/: index.html
0.1.0/api_reference/warnings/: index.html
0.1.0/design/: index.html
0.1.0/images/: searching.drawio
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/CHANGELOG/: index.html
0.1.1/LICENSE/: index.html
0.1.1/api_reference/events/: index.html
0.1.1/api_reference/exception_handlers/: index.html
0.1.1/api_reference/main/: index.html
0.1.1/api_reference/middleware/: index.html
0.1.1/api_reference/warnings/: index.html
0.1.1/design/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/CHANGELOG/: index.html
0.1.2/LICENSE/: index.html
0.1.2/api_reference/events/: index.html
0.1.2/api_reference/exception_handlers/: index.html
0.1.2/api_reference/main/: index.html
0.1.2/api_reference/middleware/: index.html
0.1.2/api_reference/warnings/: index.html
0.1.2/design/: index.html
0.1.2/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/LICENSE/: index.html
0.2.0/api_reference/events/: index.html
0.2.0/api_reference/exception_handlers/: index.html
0.2.0/api_reference/main/: index.html
0.2.0/api_reference/middleware/: index.html
0.2.0/api_reference/warnings/: index.html
0.2.0/design/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/CHANGELOG/: index.html
0.2.1/LICENSE/: index.html
0.2.1/api_reference/events/: index.html
0.2.1/api_reference/exception_handlers/: index.html
0.2.1/api_reference/main/: index.html
0.2.1/api_reference/middleware/: index.html
0.2.1/api_reference/warnings/: index.html
0.2.1/design/: index.html
0.2.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.2/CHANGELOG/: index.html
0.2.2/LICENSE/: index.html
0.2.2/api_reference/events/: index.html
0.2.2/api_reference/exception_handlers/: index.html
0.2.2/api_reference/main/: index.html
0.2.2/api_reference/middleware/: index.html
0.2.2/api_reference/warnings/: index.html
0.2.2/design/: index.html
0.2.2/images/: searching_post.drawio
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/LICENSE/: index.html
0.3.0/api_reference/events/: index.html
0.3.0/api_reference/exception_handlers/: index.html
0.3.0/design/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/CHANGELOG/: index.html
0.4.0/LICENSE/: index.html
0.4.0/design/: index.html
0.4.0/search/: search_index.json
CHANGELOG/: index.html
LICENSE/: index.html
api_reference/events/: index.html
api_reference/exception_handlers/: index.html
api_reference/main/: index.html
api_reference/middleware/: index.html
api_reference/warnings/: index.html
design/: index.html
docs/: .pages  design.md  index.md
docs/api_reference/: events.md  exception_handlers.md  main.md  middleware.md  warnings.md
docs/images/: searching.drawio  searching_get.drawio  searching_post.drawio
docs/jupyter/: .pages  herokuapp.ipynb  herokuapp_test.ipynb  marketplace_proxy.ipynb
docs_overrides/: main.html
images/: searching_get.drawio
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: index.html
latest/LICENSE/: index.html
latest/design/: index.html
latest/search/: search_index.json
main/design/: index.html
openapi/: openapi.json  openapi.yml
optimade_gateway/: __init__.py  config.json  config.yml  config_atlas.yml  events.py  exception_handlers.py  exceptions.py  main.py  middleware.py  run.py  warnings.py
optimade_gateway/common/: config.py  exceptions.py  logger.py  utils.py
optimade_gateway/mappers/: __init__.py  base.py  databases.py  gateways.py  links.py  queries.py
optimade_gateway/models/: __init__.py  databases.py  gateways.py  queries.py  resources.py  responses.py  search.py  security.py
optimade_gateway/mongo/: __init__.py  collection.py  database.py
optimade_gateway/queries/: __init__.py  params.py  perform.py  perform_query.py  prepare.py  process.py  utils.py
optimade_gateway/routers/: __init__.py  callback.py  databases.py  gateways.py  heartbeat.py  info.py  links.py  queries.py  search.py  structures.py  utils.py
optimade_gateway/security/: oauth2.py
search/: search_index.json
stable/design/: index.html
tests/: conftest.py  test_events.py
tests/queries/: test_perform.py
tests/routers/: test_databases.py  test_gateways.py  test_info.py  test_links.py  test_queries.py  test_search.py  test_structures.py  test_versions.py
tests/static/: test_config.json  test_config.yml  test_databases.json  test_gateways.json  test_links.json  test_queries.json
(+453 files in other folders)
